Rename public binaries and add analyzer refinements